--- a/base.html
+++ b/base.html
@@ -41,6 +41,25 @@
 	</header>
 
 	<main>
+		<div class="application_block_head">
+			<p>ПОЛОЖЕНИЕ</p>
+		</div>
+		<div class="application_block_text">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet porttitor eget dolor morbi non arcu risus. Vestibulum lectus mauris ultrices eros in. Nunc mi ipsum faucibus vitae aliquet. Ornare suspendisse sed nisi lacus sed viverra tellus. Adipiscing commodo elit at imperdiet dui accumsan. Mattis pellentesque id nibh tortor. Commodo nulla facilisi nullam vehicula ipsum a arcu. Risus in hendrerit gravida rutrum quisque non. Ut consequat semper viverra nam libero justo laoreet. Sit amet venenatis urna cursus eget nunc scelerisque. Velit scelerisque in dictum non consectetur a erat nam. Diam phasellus vestibulum lorem sed risus ultricies. Amet aliquam id diam maecenas ultricies mi eget. Mauris commodo quis imperdiet massa. Eget duis at tellus at.<br><br>
+
+			Ut placerat orci nulla pellentesque dignissim enim sit amet venenatis. Pharetra vel turpis nunc eget lorem dolor. Semper risus in hendrerit gravida rutrum. Amet consectetur adipiscing elit pellentesque habitant morbi tristique. In hac habitasse platea dictumst quisque. Dolor sit amet consectetur adipiscing elit duis tristique. Accumsan tortor posuere ac ut consequat. Pulvinar pellentesque habitant morbi tristique senectus et. Semper feugiat nibh sed pulvinar proin gravida. A erat nam at lectus urna duis convallis convallis. Viverra orci sagittis eu volutpat odio facilisis mauris. Tristique senectus et netus et malesuada fames ac. Egestas diam in arcu cursus euismod quis viverra.<br><br>
+
+			Tincidunt eget nullam non nisi est sit amet facilisis. Habitant morbi tristique senectus et netus et malesuada fames ac. Morbi quis commodo odio aenean sed adipiscing. Rhoncus mattis rhoncus urna neque viverra justo. Consectetur purus ut faucibus pulvinar. Sit amet luctus venenatis lectus magna fringilla urna. Ac odio tempor orci dapibus ultrices in iaculis nunc. Nibh cras pulvinar mattis nunc. Ornare quam viverra orci sagittis eu volutpat odio facilisis mauris. Vestibulum sed arcu non odio euismod lacinia.<br><br>
+
+			Habitant morbi tristique senectus et netus et malesuada fames. Nulla aliquet enim tortor at auctor urna nunc id. Porttitor lacus luctus accumsan tortor posuere. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Lacus laoreet non curabitur gravida arcu ac tortor dignissim. In hac habitasse platea dictumst quisque sagittis. In eu mi bibendum neque egestas congue. Sed cras ornare arcu dui vivamus. Senectus et netus et malesuada fames ac. Libero justo laoreet sit amet cursus sit. Senectus et netus et malesuada fames. Morbi leo urna molestie at elementum eu facilisis sed odio. Imperdiet massa tincidunt nunc pulvinar. Augue interdum velit euismod in pellentesque. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum. Tempor orci dapibus ultrices in iaculis nunc sed augue. Amet massa vitae tortor condimentum lacinia quis vel eros donec. Leo duis ut diam quam. Volutpat odio facilisis mauris sit.<br><br>
+
+			Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Luctus venenatis lectus magna fringilla urna. Sodales neque sodales ut etiam sit amet. Id consectetur purus ut faucibus pulvinar elementum. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Ornare arcu odio ut sem nulla pharetra diam sit amet. Augue mauris augue neque gravida in fermentum et sollicitudin. Eros donec ac odio tempor orci dapibus. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Massa sapien faucibus et molestie. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Nam aliquam sem et tortor consequat id porta nibh venenatis. Nisl tincidunt eget nullam non nisi. Ullamcorper dignissim cras tincidunt lobortis feugiat. Id velit ut tortor pretium viverra suspendisse potenti nullam. Ac ut consequat semper viverra. Magna eget est lorem ipsum dolor sit amet. Turpis egestas sed tempus urna et pharetra pharetra. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper.</p>
+		</div>
+		<div class="application_block_button">
+			<div class="application_button">
+				<p>СКАЧАТЬ ПОЛОЖЕНИЕ</p>
+			</div>
+		</div>
 		<!--  -->
 	</main>
 	<footer>
