--- a/sponsors.html
+++ b/sponsors.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/base.js" defer></script>
-	<title>Base</title>
+	<title>Спонсоры</title>
 </head>
 <body>
 	<div class="mobile-menu">
@@ -49,7 +49,7 @@
 				<div class="sponsors-logo">
 					<img src="img/sponsors-logo.jpg">
 				</div>
-				<div class="contacts-descr">
+				<div class="sponsors contacts-descr">
 					<a>GROUP CAT CAT</a><br>
 					<a>текст текст текст текст текст текст
 					текст текст текст текст текст текст
@@ -76,7 +76,7 @@
 				<div class="sponsors-logo">
 					<img src="img/sponsors-logo.jpg">
 				</div>
-				<div class="contacts-descr">
+				<div class="sponsors contacts-descr">
 					<a>GROUP CAT CAT</a><br>
 					<a>текст текст текст текст текст текст
 					текст текст текст текст текст текст
@@ -103,7 +103,7 @@
 				<div class="sponsors-logo">
 					<img src="img/sponsors-logo.jpg">
 				</div>
-				<div class="contacts-descr">
+				<div class="sponsors contacts-descr">
 					<a>GROUP CAT CAT</a><br>
 					<a>текст текст текст текст текст текст
 					текст текст текст текст текст текст
